# Simple_Text_Counter

./: .gitignore  CMakeLists.txt  Counter.cpp  README.md  Text_Counter  counting.cpp  help.cpp  main.cpp  makefile
include/: Counter.h  counting.h  help.h
